# events_streamlit_dashboard

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json
src/events/: __init__.py  app.py
src/events/assets/data/: events_combined.csv
src/events/assets/markdown/: dashboard_description.md  intro_events.md
src/events/assets/style/: dashboard.css
src/events/components/: charts.py  filters.py  kpis.py
src/events/pages/: dashboard.py  home.py  insights.py  raw_data.py
src/events/utils/: constants.py  helpers.py
